Add first draft of asset owners endpoint
