# api/protobuff/stats-api.swagger.json
@@ -16,14 +16,14 @@
     "application/json"
   ],
   "paths": {
-    "/v1/epochs/{epoch}/rich-list": {
+    "/v1/issuers/{issuerIdentity}/assets/{assetName}/owners": {
       "get": {
-        "operationId": "StatsService_GetRichListSlice",
+        "operationId": "StatsService_GetAssetOwners",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbGetRichListSliceResponse"
+              "$ref": "#/definitions/pbGetAssetOwnershipResponse"
             }
           },
           "default": {
@@ -35,7 +35,13 @@
         },
         "parameters": [
           {
-            "name": "epoch",
+            "name": "issuerIdentity",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "assetName",
             "in": "path",
             "required": true,
             "type": "string"
@@ -45,7 +51,14 @@
             "in": "query",
             "required": false,
             "type": "integer",
-            "format": "int32"
+            "format": "int64"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -74,9 +87,86 @@
           "StatsService"
         ]
       }
+    },
+    "/v1/rich-list": {
+      "get": {
+        "operationId": "StatsService_GetRichListSlice",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbGetRichListSliceResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "StatsService"
+        ]
+      }
     }
   },
   "definitions": {
+    "pbAssetOwnership": {
+      "type": "object",
+      "properties": {
+        "identity": {
+          "type": "string"
+        },
+        "numberOfShares": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "managingContractIndex": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "issuanceIndex": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "pbGetAssetOwnershipResponse": {
+      "type": "object",
+      "properties": {
+        "pagination": {
+          "$ref": "#/definitions/pbPagination"
+        },
+        "tick": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "owners": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/pbAssetOwnership"
+          }
+        }
+      }
+    },
     "pbGetLatestDataResponse": {
       "type": "object",
       "properties": {
@@ -90,6 +180,10 @@
       "properties": {
         "pagination": {
           "$ref": "#/definitions/pbPagination"
+        },
+        "epoch": {
+          "type": "integer",
+          "format": "int64"
         },
         "richList": {
           "$ref": "#/definitions/pbRichList"
@@ -108,6 +202,10 @@
           "format": "int32"
         },
         "totalPages": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "pageSize": {
           "type": "integer",
           "format": "int32"
         }
